--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "gulp-scss-starter",
-    "description": "Frontend development with pleasure",
-    "author": "Andrey Gorokhov",
+    "name": "PaymentWall",
+    "description": "PaymentWall testtask",
+    "author": "Vitalii",
     "repository": {
         "type": "git",
-        "url": "https://github.com/andreyalexeich/gulp-scss-starter.git"
+        "url": "https://github.com/StrelnikovVitaliy/paymentwall.git"
     },
     "license": "MIT",
     "scripts": {
