--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "PaymentWall",
+    "name": "paymentwalltesttask",
     "description": "PaymentWall testtask",
     "author": "Vitalii",
     "repository": {
